[package]
name = "mimir"
version = "0.2.0"
edition = "2021"
authors = ["Luke Carr <luke@subtale.com>"]
description = "Contextual query engine for dynamic video games"
documentation = "https://github.com/subtalegames/mimir"
homepage = "https://github.com/subtalegames/mimir"
repository = "https://github.com/subtalegames/mimir"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
float-cmp = "0.9.0"
rand = "0.8.5"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "criterion_evaluate"
harness = false

[features]
serde = ["serde_crate"]
