[package]
name = "subtale-mimir"
version = "0.4.0"
edition = "2021"
authors = ["Luke Carr <luke@subtale.com>"]
description = "Contextual query engine for dynamic video games"
documentation = "https://mimir.subtale.com"
homepage = "https://mimir.subtale.com"
repository = "https://github.com/subtalegames/mimir"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
float-cmp = { version = "0.9.0", optional = true }
indexmap = "1.9.3"
rand = "0.8.5"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "float_evaluator"
harness = false

[features]
serde = ["serde_crate", "indexmap/serde"]
float = ["dep:float-cmp"]
