[package]
name = "subtale-mimir"
version = "0.4.0"
edition = "2021"
authors = ["Luke Carr <luke@subtale.com>"]
description = "Contextual query engine for dynamic video games"
homepage = "https://mimir.subtale.com"
repository = "https://github.com/subtalegames/mimir"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
float-cmp = { version = "0.9", optional = true }
indexmap = "1.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "float_evaluator"
harness = false

[[bench]]
name = "ruleset_evaluation"
harness = false

[features]
serde = ["dep:serde", "indexmap/serde"]
float = ["dep:float-cmp"]
